--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,6 @@
     <div id="directory-list"></div>
 
     <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
+    <script src="./render.js"></script>
   </body>
 </html>
