--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Backparade</title>
+    <title>backparade</title>
   </head>
   <body>
     <script src="./render.js"></script>
